# libddprof

./: .bazelrc  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-3rdparty.yml  NOTICE  README.md  WORKSPACE  ddprof_ffi.pc.in  ffi-build.sh
.github/: CODEOWNERS
.github/workflows/: licensecheck.yml  lint.yml  test-bazel.yml  test-ruby.yml  test.yml
cargo/: crates.bzl
cargo/remote/: BUILD.anyhow-1.0.44.bazel  BUILD.cc-1.0.71.bazel  BUILD.chrono-0.4.19.bazel  BUILD.fixedbitset-0.2.0.bazel  BUILD.futures-0.3.17.bazel  BUILD.futures-channel-0.3.17.bazel  BUILD.futures-core-0.3.17.bazel  BUILD.futures-executor-0.3.17.bazel  BUILD.futures-io-0.3.17.bazel  BUILD.futures-macro-0.3.17.bazel  BUILD.futures-sink-0.3.17.bazel  BUILD.futures-task-0.3.17.bazel  BUILD.futures-util-0.3.17.bazel  BUILD.getrandom-0.2.3.bazel  BUILD.h2-0.3.7.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.hyper-0.14.14.bazel  BUILD.hyper-rustls-0.22.1.bazel  BUILD.libc-0.2.106.bazel  BUILD.mio-0.7.14.bazel  BUILD.num-integer-0.1.44.bazel  BUILD.num-traits-0.2.14.bazel  BUILD.num_cpus-1.13.0.bazel  BUILD.once_cell-1.8.0.bazel  BUILD.petgraph-0.5.1.bazel  BUILD.prost-0.8.0.bazel  BUILD.prost-build-0.8.0.bazel  BUILD.prost-derive-0.8.0.bazel  BUILD.prost-types-0.8.0.bazel  BUILD.rand-0.8.4.bazel  BUILD.reqwest-0.11.6.bazel  BUILD.ring-0.16.20.bazel  BUILD.serde-1.0.130.bazel  BUILD.serde_json-1.0.68.bazel  BUILD.serde_urlencoded-0.7.0.bazel  BUILD.socket2-0.4.2.bazel  BUILD.syn-1.0.81.bazel  BUILD.tempfile-3.2.0.bazel  BUILD.time-0.1.43.bazel  BUILD.tinyvec-1.5.0.bazel  (+12 more)
ddcommon/: Cargo.toml
ddcommon/src/: lib.rs
ddprof-exporter/: BUILD  Cargo.toml
ddprof-exporter/src/: connector.rs  container_id.rs  errors.rs  lib.rs  multipart.rs  tag.rs
ddprof-exporter/tests/: cgroup.fargate.1.4  form.rs
ddprof-ffi/: BUILD  Cargo.toml  cbindgen.toml
ddprof-ffi/src/: exporter.rs  lib.rs  profiles.rs  slice.rs  tags.rs  vec.rs
ddprof-profiles/: BUILD  build.rs
ddprof-profiles/src/: lib.rs  pprof.rs
ddprof/cargo/: BUILD.bazel
ddtelemetry/: Cargo.toml
examples/ffi/: CMakeLists.txt  (+1 more)
ruby/: .gitignore  README.md  Rakefile  gems.rb  libddprof.gemspec
telemetry/: Cargo.toml
telemetry/examples/: tm-ping.rs  tm-worker-test.rs
telemetry/src/: config.rs  lib.rs  worker.rs
telemetry/src/comms/: mod.rs
telemetry/src/data/: common.rs  metrics.rs  mod.rs  payload.rs  payloads.rs
telemetry/src/info/: os.rs
(+8 files in other folders)
