[package]
edition = "2018"
name = "ddtelemetry"
license = "Apache 2.0"
version = "0.5.0-rc.1"

[dependencies]
anyhow = { version = "1.0" }
lazy_static = { version = "1.4" }
regex = { version = "1" }
reqwest = { version = "0.11.4", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sys-info = { version = "0.9.0" }
uuid = { version = "0.8.2", features = ["v4"] }
futures = { version = "0.3" }
ddcommon = { path = "../ddcommon" }

[dev-dependencies]
tokio = { version = "1.17", features=["macros"] }